applied the patch from Markus Barchfeld

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,10 @@
 0.6
 - Added two output formats: plain and xml
+- Applied patch from Markus Barchfeld. 
+
+0.5.3
+- Added Module#post_mortem_method method, which wraps any method with Debugger.post_mortem block.
+- Added breakpoint id, which is not dependent on the breakpoint position in Debugger.breakpoints array.
 
 0.5.2
 - Fixes interoperability problems with rspec.
