--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,10 @@
 - Added two output formats: plain and xml
 - Applied patch from Markus Barchfeld. 
 
+0.5.4
+- Added -x/--trace option to rdebug script. Patch from R. Bernstein.
+- Removed a live thread reference from the context's structure avoiding memory leakage.
+
 0.5.3
 - Added Module#post_mortem_method method, which wraps any method with Debugger.post_mortem block.
 - Added breakpoint id, which is not dependent on the breakpoint position in Debugger.breakpoints array.
