--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 0.6
-- Added option to exclude collecting of frame bindings
+- Added option to exclude collecting of frame bindings.
+- Several performance optimizations.
 
 0.5.4
 - Added -x/--trace option to rdebug script. Patch from R. Bernstein.
