--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+0.7.4
+- Added a workaround of the Ruby interpreter problem where a method created with Module#define_method 
+  and which raises an exception doesn't trigger a :return event, this way screwing the stack trace.
+- Fixed the help for 'where' command.
+
 0.7.3
 - Fixed a case when a frame is not popped up properly.
 - Removed Context.ignore= method, since it can result with the segmentation fault error.
@@ -5,7 +10,7 @@
 - Fixed several cases of seg faults when accessing dyna_vars structure.
 
 0.7.2
-- Fixed Context#resume (a thread should be waked up only when it was running when it wsa suspened).
+- Fixed Context#resume (a thread should be waked up only when it was running when it was suspended).
 - When handling post-mortem exception, all threads must be suspended.
 
 0.7.1
