--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 0.7.4
 - Added a workaround of the Ruby interpreter problem where a method created with Module#define_method 
   and which raises an exception doesn't trigger a :return event, this way screwing the stack trace.
+- Fixed a situation of an array 'out of bounds' access.
 - Fixed the help for 'where' command.
 
 0.7.3
