added 'set autoirb' setting

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 0.8
 - Extract the base debugger API into a separate gem (ruby-debug-base), so it will be easier to add a new interface.
+- Added 'set autoirb' setting.
 - Bugfixes.
 
 0.7.5
