--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
 0.8.2
+- Kernel#debugger method will start the debugger if it's not running.
 - Added Context#stop_reason method.
 - Calling a method with a block will create a new frame. This changes the behavior of 'next' command. So in order to step into a block, 'step' command must be used. That fixes bug #9629.
+- Added the possibility to add a temporary context-specific breakpoint. Context#breakpoint and Context#set_breakpoint methods are added. 
+- 'cont' command now accepts a numerical parameter which implements 'Continue until line' behavior.
 
 0.8.1
 - Added a shortcut module 'debugger'. require "ruby-debug/debugger" will start the debugger and stop at the next line (similar to require 'debug').
