--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,9 @@
 - Calling a method with a block will create a new frame. This changes the behavior of 'next' command. So in order to step into a block, 'step' command must be used. That fixes bug #9629.
 - Added the possibility to add a temporary context-specific breakpoint. Context#breakpoint and Context#set_breakpoint methods are added. 
 - 'cont' command now accepts a numerical parameter which implements 'Continue until line' behavior.
+- Added new Context.frame_class method
+- 'frame' command will display a class name along with method name
+- Added new 'fullpath' setting.
 
 0.8.1
 - Added a shortcut module 'debugger'. require "ruby-debug/debugger" will start the debugger and stop at the next line (similar to require 'debug').
