--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+0.9.2
+- Fixed file comparison in Windows platform.
+
 0.9.1
 - Fixed incorrect stack calculation.
 - Context#stop_next= method aliased as Context#step.
