--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+0.9.3
+- Fixed if..elsif..end stepping.
+- Ctrl-C from irb continues without showing the debugger prompt.
+
 0.9.2
 - Fixed file comparison in Windows platform.
 - Added setter methods to Breakpoint properties
