--- a/CHANGES
+++ b/CHANGES
@@ -1,8 +1,8 @@
 0.9.3
 - Fixed if..elsif..end stepping.
-- Ctrl-C from irb or 'cont' command continues execution without showing the debugger prompt.
-- added Debugger.settings method to programatically modify command settings
-- added Kernel#breakpoint as alias to Kernel#debugger is the former is not already defined.
+- From irb session Ctrl-C or 'cont' command continues execution without showing the debugger prompt.
+- Added Debugger.settings method to programatically modify command settings.
+- Added Kernel#breakpoint as alias to Kernel#debugger is the former is not already defined.
 
 0.9.2
 - Fixed file comparison in Windows platform.
