--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+0.9.4
+- '-r' option can be used to require additional libraries
+
 0.9.3
 - Fixed if..elsif..end stepping.
 - From irb session Ctrl-C or 'cont' command continues execution without showing the debugger prompt.
