More minor tweaks to thread regexps. Allows "thread" and "thread nnn" work

--- a/doc/ruby-debug.texi
+++ b/doc/ruby-debug.texi
@@ -60,7 +60,7 @@
 
 This file describes ruby-debug, the Ruby Debugger.
 
-@c This is the @value{EDITION} Edition, @value{UPDATED}
+This is the @value{EDITION} Edition, @value{UPDATED}
 @c Copyright (C) 2007 ...
 
 @menu
