--- a/doc/ruby-debug.texi
+++ b/doc/ruby-debug.texi
@@ -697,7 +697,54 @@ To be continued...
 @node List
 @section Examining Program Source Files (@samp{list})
 
-To be continued...
+@value{DBG} can print parts of your script's source.  When your script
+stops, @value{DBG} spontaneously prints the line where it stopped.
+Likewise, when you select a stack frame (@pxref{Selection})
+@value{DBG} prints the line where execution in that frame has stopped.
+You can print other portions of source files by explicit command.
+
+If you use @value{DBG} through its Emacs interface, you may prefer to
+use Emacs facilities to view source; @pxref{GNU Emacs}.
+
+@kindex list
+@kindex l @r{(@code{list})}
+To print lines from a source file, use the @code{list} command
+(abbreviated @code{l}).  By default, ten lines are printed. Fewer may
+appear if there fewer lines before or after the current line to center
+the listing around.
+
+There are several ways to specify what part of the file you want to print.
+Here are the forms of the @code{list} command.
+
+@table @code
+@item list @var{line-number}
+@itemx l @var{line-number}
+Print lines centered around line number @var{line-number} in the
+current source file.
+
+@item list
+@itemx l
+Print more lines.  If the last lines printed were printed with a
+@code{list} command, this prints lines following the last lines
+printed; however, if the last line printed was a solitary line printed
+as part of displaying a stack frame (@pxref{Frames}), this prints lines
+centered around that line.
+
+@item list -
+@itemx l -
+Print lines just before the lines last printed.
+@item list @var{first}-@var{last}
+Print lines between @var{first} and @var{last} inclusive.
+
+@item list =
+Print lines centered around where the script is stopped.
+@end table
+
+Repeating a @code{list} command with @key{RET} discards the argument,
+so it is equivalent to typing just @code{list}.  This is more useful
+than listing the same lines again.  An exception is made for an
+argument of @samp{-}; that argument is preserved in repetition so that
+each repetition moves up in the source file.
 
 @node FrameCommands
 @section Examining the Stack Frame (@samp{where}, @samp{up}, @samp{down}, @samp{frame})
@@ -919,8 +966,7 @@ Set catchpoint to an exception. Without an exception name show catchpoints.
 Delete the breakpoints, watchpoints specified as arguments. 
 
 If no argument is specified, delete all breakpoints (@DBG asks
-confirmation, unless you have @code{set confirm off}).  You can
-abbreviate this command as @code{del}.
+confirmation.  You can abbreviate this command as @code{del}.
 @end table
 
 @node Resuming Execution
