--- a/CHANGES
+++ b/CHANGES
@@ -15,7 +15,7 @@
   the parameters (with the most recent values, not the values at call time).
 - post-mortem "exit" bug fixed. 
 - More Emacs-friendly: rdebug-track.el will track location inside an Emacs
-  shell. Emacs position information shown breakpoint and catchpoints.
+  shell. Emacs position information shown in breakpoints and catchpoints.
 - INCOMPATIBLE CHANGE: "break" now sets a breakpoint on the current line
   (same as gdb). Use "info break" for a list of breakpoints.
 
